--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-es2015-destructuring": "^6.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "electron": "^1.4.1",
     "electron-connect": "^0.6.1",
     "electron-connect-webpack-plugin": "^0.1.1",
