write logs to tmp at runtime

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "material-ui": "^0.16.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "tmp": "^0.0.31",
+    "uuid": "^3.0.1"
   }
 }
