--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "always-tail": "^0.2.0",
     "babel-polyfill": "^6.20.0",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.5",
