--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-polyfill": "^6.20.0",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.5",
+    "project-name-generator": "^2.1.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
