--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "always-tail": "^0.2.0",
     "babel-polyfill": "^6.20.0",
+    "localforage": "^1.4.3",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.5",
     "project-name-generator": "^2.1.3",
