--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "always-tail": "^0.2.0",
     "babel-polyfill": "^6.20.0",
     "fs-extra": "^1.0.0",
+    "js-yaml": "^3.7.0",
     "localforage": "^1.4.3",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.5",
@@ -44,6 +45,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "tail": "^1.2.1",
     "tmp": "^0.0.31",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "yamljs": "^0.2.8"
   }
 }
