set up electron-builder

--- a/package.json
+++ b/package.json
@@ -7,8 +7,18 @@
   "scripts": {
     "start": "webpack",
     "dev": "webpack --watch",
-    "package": "electron-packager . 'App Engine Trebuchet' --out bin --icon app/images/mac/icon.icns --overwrite"
+    "package": "electron-packager . 'App Engine Trebuchet' --out bin --icon build/icon.icns --overwrite",
+    "pack": "build --dir",
+    "dist": "build -m"
   },
+  "build": {
+    "appId": "app-engine-trebuchet",
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "win": {}
+  },
+  "postinstall": "install-app-deps",
   "repository": "https://github.com/JustinBeckwith/trebuchet",
   "keywords": [
     "Electron",
@@ -18,7 +28,7 @@
     "demo"
   ],
   "author": "Justin Beckwith <justin.beckwith@gmail.com",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "devDependencies": {
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
@@ -29,6 +39,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "electron": "^1.4.1",
+    "electron-builder": "^10.12.0",
     "electron-connect": "^0.6.1",
     "electron-connect-webpack-plugin": "^0.1.1",
     "electron-packager": "^8.4.0",
@@ -48,9 +59,6 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
-    "tail": "^1.2.1",
-    "tmp": "^0.0.31",
-    "uuid": "^3.0.1",
-    "yamljs": "^0.2.8"
+    "uuid": "^3.0.1"
   }
 }
