--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ os:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gnu-tar graphicsmagick xz; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gnu-tar graphicsmagick xz mono; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install wine --without-x11; fi
 
 script:
   - webpack
