--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: node_js
 node_js:
   - "6"
 
-osx_image: xcode8.2
+# osx_image: xcode8.2
 os: 
   - osx
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gnu-tar graphicsmagick xz mono; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install wine --without-x11; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gnu-tar graphicsmagick xz; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install mono; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install wine --without-x11; fi
 
 script:
   - webpack
