--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "chmodr": "^1.0.2",
     "cross-spawn": "^5.0.1",
     "electron-log": "^1.2.2",
+    "electron-sudo": "^4.0.12",
     "fix-path": "^2.1.0",
     "fs-extra": "^1.0.0",
     "js-yaml": "^3.7.0",
