--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cross-spawn": "^5.0.1",
     "electron-log": "^1.2.2",
     "electron-sudo": "^4.0.12",
+    "elevator": "^2.1.0",
     "fix-path": "^2.1.0",
     "fs-extra": "^1.0.0",
     "js-yaml": "^3.7.0",
