--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "app-engine-trebuchet",
   "productName": "App Engine Trebuchet",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "App Engine Trebuchet is a visual tool that makes it easier to create and deploy applications for App Engine.  It's meant to be a replacement for the App Engine Launcher.",
   "main": "main.js",
   "scripts": {
     "start": "electron . --log-level=silly",
-    "build": "webpack .",
+    "build": "webpack",
     "dev": "webpack --watch",
     "dist": "npm run build && build -ml",
     "distw": "npm run build && build -w",
+    "distm": "npm run build && build -m",
     "logs-local": "cat ~/Library/Logs/App\\ Engine\\ Trebuchet/log.log",
     "open-local": "open /Applications/App\\ Engine\\ Trebuchet.app/ --args --log-level silly"
   },
@@ -40,7 +41,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "electron": "^1.4.1",
+    "electron": "^1.4.13",
     "electron-builder": "^10.12.0",
     "electron-connect": "^0.6.1",
     "webpack": "^1.14.0",
@@ -51,6 +52,7 @@
     "babel-polyfill": "^6.20.0",
     "chmodr": "^1.0.2",
     "cross-spawn": "^5.0.1",
+    "electron-is-dev": "^0.1.2",
     "electron-log": "^1.2.2",
     "fix-path": "^2.1.0",
     "fs-extra": "^1.0.0",
