--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "author": "Justin Beckwith <justin.beckwith@gmail.com",
   "license": "Apache-2.0",
   "devDependencies": {
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.19.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "electron": "^1.4.13",
     "electron-builder": "^10.12.0",
     "electron-connect": "^0.6.1",
-    "webpack": "^1.14.0",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
@@ -55,6 +55,7 @@
     "electron-is-dev": "^0.1.2",
     "electron-log": "^1.2.2",
     "fix-path": "^2.1.0",
+    "flem": "^1.0.9",
     "fs-extra": "^1.0.0",
     "js-yaml": "^3.7.0",
     "localforage": "^1.4.3",
@@ -64,8 +65,6 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
-    "spawn-sync": "^1.0.15",
-    "try-thread-sleep": "^1.0.0",
     "uuid": "^3.0.1"
   }
 }
