--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "electron": "^1.4.13",
+    "electron": "^1.6.2",
     "electron-builder": "^10.12.0",
     "electron-connect": "^0.6.1",
     "webpack": "^2.3.3",
@@ -55,12 +55,13 @@
     "electron-is-dev": "^0.1.2",
     "electron-log": "^1.2.2",
     "fix-path": "^2.1.0",
-    "flem": "^1.0.9",
+    "flem": "^1.0.11",
     "fs-extra": "^1.0.0",
     "js-yaml": "^3.7.0",
     "localforage": "^1.4.3",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.5",
+    "node-loader": "^0.6.0",
     "project-name-generator": "^2.1.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
